--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14380,7 +14380,8 @@ ul.insuranceHint1 li {
 }
 /*image Preview*/
 .ViewImage img{
-    width: 060px;
+    width: 60px;
+    height: auto !important;
     margin-top: 29px;
     margin-left:10px;
 }
