--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14734,7 +14734,7 @@ a.activePageDocutmet {
     display: inline-block;
     padding: 13px 15px;
     cursor: pointer;
-    margin-top: 30px;
+    margin: 30px 4px 0px 4px;
 }
 /* Not Found Page End */
 
