--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -12276,6 +12276,10 @@ ul.patientHint li {
 .darkTheme .staffGraphUpr {
     background-color: #404646;
 }
+.openScandhrf1 img{
+    margin-top: 20px;
+}
+
 .darkTheme .invoicHsptalIner.Mui-selected {
     background-color: transparent !important;
 }
