--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9924,6 +9924,9 @@ button.crdoLghtBlu2 {
     border-bottom: none;
 }
 /* Added by Ankita */
+.darkTheme .headercont {
+    background: #3f4646;
+}
 .blood-sec{
     line-height: 30px !important;
 }
@@ -13827,6 +13830,35 @@ border-style: solid;
     width:95%
 }
 
+.profileInfoSection h1{
+    color: #000808;
+    font-family: Muli;
+    font-size: 22px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 42px;
+    margin-bottom: 20px;
+}
+.printSec{
+    display:flex;
+}
+.printSec p{
+    font-size: 20px;
+    font-weight: 600;
+}
+.printSec p:last-child, .printSec p:nth-child(2){
+    margin-left:10px;
+}
+.editorSec{
+    font-size: 18px;
+    margin-top:20px;
+    font-weight: bold;
+}
+.allInfoSection{
+    display:flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
 
 .switchBtn{
     margin-top: 30px;
