for getting mail and sms when using scanning functionality

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -679,6 +679,7 @@ a.hideDots img {
     font-weight: bold;
     letter-spacing: 0;
     margin-bottom: 0px !important;
+    line-break: anywhere !important;
 }
 .vh-section .prfilHghtLft p span, .vh-section .prfilHghtRght p span {
     font-size: 14px;
