--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9613,6 +9613,9 @@ button.crdoLghtBlu2 {
     margin: 12px 0px;
     padding-left: 45px;
   }
+  .allInfo2 {
+    padding-left: 5px !important;
+  }
   .attchNoteMain {
     justify-content: flex-start;
     padding-left: 48px;
@@ -9934,6 +9937,22 @@ button.crdoLghtBlu2 {
     .vh-section .prfilHghtLft p span, .vh-section .prfilHghtRght p span{
         display: block;
     }
+    .srchLft input::-webkit-input-placeholder {
+        overflow: hidden;
+        width:87%;
+      }
+    .srchLft input::-moz-placeholder {
+        overflow: hidden;
+        width:87%;
+      }
+    .srchLft input:-ms-input-placeholder {
+        overflow: hidden;
+        width:87%;
+      }
+    .srchLft input:-moz-placeholder { 
+        overflow: hidden;
+        width:87%;
+      }
 }
 .spec-bed-profile{
     word-break: break-word;
