update in staff,doctor,nurse

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -14242,3 +14242,9 @@ display: block;}
 .cnfrmDiaMain .fillDia .errChrMsg{
 color: #FF0000!important;
 }
+
+
+
+.hosFstSec{
+    margin-left:100px;
+}
