chnages in task component for the picture evaluation

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -14182,8 +14182,8 @@ color: #FF0000!important;
     margin-top: 10px;
   }
   .imageEvalSize img {
-    height: 90px;
+    /* height: 90px; */
     width: 50%;
-    /* border-radius: 32px; */
+    border-radius: 15px;
     margin-right: 8px;
   }
