--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4862,13 +4862,13 @@ body {
     position: relative;
 }
 .dataLoader img {
-    width : 400px;
-    position: absolute;
-    left: 10%;
-    right: 10%;
-    top: 26%;
-    text-align: center;
-    margin: 0 auto;
+    width : 400px !important;
+    position: absolute !important;
+    left: 10% !important;
+    right: 10% !important;
+    top: 26% !important;
+    text-align: center !important;
+    margin: 0 auto !important;
 }
 .dataLoader {
     position: fixed;
