--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -14463,3 +14463,10 @@ label.newrole {
   margin: 0px !important;
   padding: 0px !important;
 }
+
+.darkTheme .minall_sec .css-12jo7m5 {
+  color: #d9dada;
+}
+.darkTheme .serviceallSec {
+  color: #d9dada;
+}
