--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -10562,8 +10562,9 @@ img.manage-size {
 }
 .darkTheme .cntryDropTop,
 .homeBgDrk .cntryDropTop {
-  border: 1px solid #5d5d5d;
-  border-radius: 5px;
+    /* border: 1px solid #5d5d5d; */
+    border-radius: 2px;
+    border: 1px solid #dfdfdf;
 }
 .cntryDropTop div {
   box-shadow: initial !important;
@@ -12249,6 +12250,9 @@ ul.patientHint li {
   color: #fafafa;
   min-height: 36px !important;
 }
+.darkTheme .react-toggle-track {
+  border: 1px solid #00abaf;
+}
 .darkTheme .mr_sel div:first-child {
   background: transparent !important;
   border: none;
@@ -12929,10 +12933,12 @@ ul.patientHint li {
   background-color: #202323;
 }
 .darkTheme .passInstIner:after {
-  border-right: 13px solid #202323;
+  border-right: 13px solid #00abaf;
+  left: -25px;
 }
 .darkTheme .passInst {
   background-color: #202323;
+  border: 1px solid #00abaf;
 }
 .darkTheme .passInst a {
   color: #c3c3c3;
@@ -13120,7 +13126,8 @@ ul.patientHint li {
 }
 .darkTheme .profileInfoIner input {
   color: #c3c3c3 !important;
-  border: 1px solid #5d5d5d;
+  /* border: 1px solid #5d5d5d; */
+  border: 1px solid #dfdfdf;
   background-color: #192020;
 }
 .darkTheme .presOpinionIner {
@@ -14468,10 +14475,19 @@ label.newrole {
   margin: 0px !important;
   padding: 0px !important;
 }
-
 .darkTheme .minall_sec .css-12jo7m5 {
   color: #d9dada;
 }
 .darkTheme .serviceallSec {
   color: #d9dada;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: transparent !important;
+}
+.srchFilter .comonSel div {
+  border: none !important;
 }
