Css issues resolved

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -14515,6 +14515,7 @@ label.newrole {
   height: "6px";
   background: "red";
   /* borderRadius: "50%"; */
+}
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
