--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -15031,10 +15031,10 @@ line-break: anywhere;
     margin-bottom:10px !important;
   }
 }
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   .certifyCheck2{
     margin-top:70%!important;
   }
-}
+} */
 
 
